tests/lean/commandPrefix.lean.expected.out
let_fun this := ();
this : Id Unit
commandPrefix.lean:3:0-3:4: error: unexpected identifier; expected command
