tests/lean/commandPrefix.lean
#check show Unit from do ()

abbr
